<resources>

    <string name="app_name">Psychopath</string>

    <string name="home_button">Home</string>
    <string name="play_button">Play</string>
    <string name="level_select_button">Level Select</string>
    <string name="leaderboards_button">Leaderboards</string>
    <string name="settings_button">Settings</string>
    <string name="about_button">About</string>
    <string name="restart_button">Restart</string>
    <string name="undo_button">Undo</string>

</resources>
