<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fullscreen_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="spencerspenst.psychopath.Main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/text"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:paddingTop="40sp">

        <!-- TODO: get rid of these IDs -->
        <Button
            android:id="@+id/play_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_button"
            android:onClick="play"/>

        <Button
            android:id="@+id/level_select_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/level_select_button"
            android:onClick="levelSelect"/>

        <Button
            android:id="@+id/game_center_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_center_button"/>

        <Button
            android:id="@+id/settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_button"
            android:onClick="settings"/>

        <Button
            android:id="@+id/about_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_button"
            android:onClick="about"/>
    </LinearLayout>

</LinearLayout>
