<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fullscreen_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="spencerspenst.psychopath.LevelSelect">

    <GridView
        android:id="@+id/level_grid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:numColumns="6"
        android:layout_margin="10dp"
        android:gravity="center"/>

    <LinearLayout
        android:id="@+id/level_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/level_select_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_button"
            android:onClick="home"/>

        <TextView
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/level_select_button"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/text"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_button"
            android:onClick="play"/>
    </LinearLayout>

</LinearLayout>
